--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rafa-coelho/affiliate-ad",
+  "name": "affiliate-ad",
   "version": "0.0.1",
   "description": "",
   "module": "dist/esm/index.js",
